Remove the passive option on touch events since that stopped working on ios

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,7 +46,8 @@
 }
 
 .touch-start {
-  overflow: hidden !important;
+  //forgot why i added this but it creates a flicker on mobile
+  //overflow: hidden !important;
 
   img {
     pointer-events: none;
